--- a/angular.json
+++ b/angular.json
@@ -36,9 +36,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.css",
-              "src/components/body/body.component.css",
-              "src/components/header/header.component.css"
+              "src/styles.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
